--- a/services/login_service/composer.json
+++ b/services/login_service/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "reliese/laravel": "^0.0.16"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
