--- a/services/login_service/package.json
+++ b/services/login_service/package.json
@@ -20,8 +20,11 @@
         "popper.js": "^1.12",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "resolve-url-loader": "^3.1.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "forever": "^3.0.2"
     }
 }
